Add main product and stats section in home

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -55,6 +55,10 @@ img {
   max-height: 100%;
 }
 
+input {
+  width: 100%;
+}
+
 .landingHomeSwiper {
   .swiper-button-next:after,
   .swiper-button-prev:after {
