--- a/sections/home/home.module.scss
+++ b/sections/home/home.module.scss
@@ -13,3 +13,7 @@
     text-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
   }
 }
+
+.statsBoxShadow {
+  box-shadow: 0px 14px 17px rgba(0, 0, 0, 0.05);
+}
