Add product detail page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -92,3 +92,15 @@ input {
     transform: translateX(min(3vw, 38px));
   }
 }
+
+.galleryThumbsSwiper {
+  .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+  }
+
+  .swiper-slide-thumb-active {
+    opacity: 1;
+  }
+}
